[package]
name = "networking-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
newtype_derive = "0.1.6"
bevy = "0.10.0"
bevy_rapier3d = "0.21.0"
bevy_egui = "0.20.3"
bevy_renet = "0.0.7"
serde = "1.0.154"
bincode = "1.3.3"
strum = { version = "0.24.1", features = ["derive"] }
bimap = { version = "0.6.3", features = ["serde"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
